removed guava, split off shiro integratino into a separate library